#+title: Change Log for ollama-buddy
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for each tagged commit on the
project's main git repository: [[https://github.com/captainflasmr/ollama-buddy

* Versions

** <2026-02-01 Sat> *1.2*

Added GitHub Copilot integration

- Added =ollama-buddy-copilot.el= for GitHub Copilot Chat API support
- Implemented GitHub OAuth device flow authentication (no API key needed)
- =M-x ollama-buddy-copilot-login= opens browser for secure GitHub authentication
- =M-x ollama-buddy-copilot-logout= removes saved authentication
- =M-x ollama-buddy-copilot-status= checks authentication status
- OAuth token persisted to =~/.emacs.d/ollama-buddy-copilot-token.json=
- Uses "p:" prefix to identify Copilot models
- Supports OpenAI (gpt-4.1, gpt-4o, gpt-5), Anthropic (claude-sonnet-4, claude-opus-4.5), Google (gemini-2.5-pro, gemini-3-pro), and xAI (grok-code-fast-1) models
- Supports conversation history and system prompts
- Header line shows "p" indicator when Copilot provider is loaded

To use GitHub Copilot:
1. Ensure you have an active GitHub Copilot subscription
2. Run =M-x ollama-buddy-copilot-login=
3. Enter the code shown in your browser at github.com/login/device
4. Select a Copilot model with =C-c m= (e.g., p:gpt-4o)

#+begin_src elisp
(use-package ollama-buddy
  :bind
  ("C-c o" . ollama-buddy-menu)
  ("C-c O" . ollama-buddy-transient-menu-wrapper)
  :config
  (require 'ollama-buddy-copilot nil t))
#+end_src

** <2026-01-31 Fri> *1.1.6*

Removed model status buffer

- Removed =ollama-buddy-show-model-status= function and =*Ollama Model Status*= buffer
- Removed =C-c v= keybinding and transient menu entry
- Model information is available in the model management buffer (=C-c W=)

** <2026-01-31 Fri> *1.1.5*

Added global system prompt for consistent response formatting
