@@ -41,7 +41,7 @@ A simple text information screen will be presented on the first opening of the c
 ,#+begin_example
  ___ _ _      n _ n      ___       _   _ _ _
 |   | | |__._|o(Y)o|__._| . |_ _ _| |_| | | |
-| | | | | .  | 1.2 | .  | . | | | . | . |__ |
+| | | | | .  |1.2.1| .  | . | | | . | . |__ |
 |___|_|_|__/_|_|_|_|__/_|___|___|___|___|___|
 ,#+end_example
 
@@ -95,6 +95,10 @@ See *Screenshots / Demos* section for more videos/demonstration.
 See full list in :
 
 [[file:CHANGELOG.org]]
+
+** <2026-02-02 Sun> *1.2.1*
+
+Added attachment count indicator to header-line - displays 📎N when files are attached for constant visual reminder.
 
 ** <2026-02-01 Sat> *1.2*
 
